# algo_owls_solutions

./: .algo_owls.ini  .gitignore  Cargo.toml  Hello.java  README.md  algo_owls  go.mod  hello.go  hello.rs  quest
benches/icpc/na_reg_22/: restaurant_opening_bench.rs
solutions/: FamilyVisits.java
solutions/icpc/nar2022/: ChampernowneCount.java  ChocolateChipFabrication.java  ColorTubes.java  FadingWind.java  FamilyVisits.java  HuntTheWumpus.java  README.md  StreetsAhead.java
solutions/usaco/dec2022/: CowCollege.java  FeedingTheCows.java  README.md
src/: README.md  main.go  main.rs
src/solutions/: README.md  mod.rs  solutions.go
src/solutions/icpc/: README.md
src/solutions/icpc/naReg22/: README.md
src/solutions/icpc/na_reg_22/: README.md  blueberry_waffle.rs  champernowne_count.rs  hunt_the_wumpus.rs  repetitive_song.rs  restaurant_opening.rs  sun_and_moon.rs
src/solutions/icpc/se_reg_22/: blueberry_waffle.rs  fading_wind.rs  restaurant_opening.rs  streets_ahead.rs
src/solutions/usaco/dec2022/: cow_college.go
